--- a/language/i18n_bg.json
+++ b/language/i18n_bg.json
@@ -3977,7 +3977,6 @@
     "CL_DV_OV_g800_mode_reheat": "Загрейте отново",
     "CL_DV_OV_g800_mode_preserving": "Консервиране",
     "CL_DV_OV_g800_mode_sterilise_bottles": "Стерилизирайте бутилките",
-    "CL_SM_CM_devices_are_running_eco_mode": "## устройства работят в ECOmode",
     "CL_DV_OV_g800_add_steam_to": "Добавете пара към процеса на печене.",
     "CL_DV_OV_g800_steam_intensity": "Интензивност на парата",
     "CL_DV_OV_g800_steam_duration": "Продължителност на парата",
@@ -3995,5 +3994,7 @@
     "CL_CF_LG_receive_content": "Целта и основата е да се даде възможност за изпращане на маркетингови съобщения или да се представи персонализирана оферта въз основа на вашите интереси или да се подобри изживяването на вашия потребител.",
     "CL_CF_LG_contact": "Вие потвърждавате, че сте информирани, че можете да оттеглите съгласието си, дадено по-горе, по всяко време в настройките на акаунта или като се свържете със следния имейл адрес: privacy@connectlife.io",
     "CL_CF_LG_legal": "Законни",
-    "CL_CF_LG_enduser_privacy": "Политика за поверителност на данните"
+    "CL_CF_LG_enduser_privacy": "Политика за поверителност на данните",
+    "CL_SM_CM_devices_are_running_eco_mode_key": "## устройства работят в режим ECO",
+    "CL_CF_UC_full_name_with_title": ""
 }
