--- a/language/i18n_el.json
+++ b/language/i18n_el.json
@@ -3977,7 +3977,6 @@
     "CL_DV_OV_g800_mode_reheat": "Αναθέρμανση",
     "CL_DV_OV_g800_mode_preserving": "Συντήρηση",
     "CL_DV_OV_g800_mode_sterilise_bottles": "Αποστείρωση μπουκαλιών",
-    "CL_SM_CM_devices_are_running_eco_mode": "## συσκευές εκτελούν ECOmode",
     "CL_DV_OV_g800_add_steam_to": "Προσθέστε ατμό στη διαδικασία ψησίματος.",
     "CL_DV_OV_g800_steam_intensity": "Ένταση ατμού",
     "CL_DV_OV_g800_steam_duration": "Διάρκεια ατμού",
@@ -3995,5 +3994,7 @@
     "CL_CF_LG_receive_content": "Ο σκοπός και η βάση είναι να επιτρέψετε την αποστολή μηνυμάτων μάρκετινγκ ή να παρουσιάσετε μια εξατομικευμένη προσφορά με βάση τα ενδιαφέροντά σας ή να βελτιώσετε την εμπειρία του χρήστη σας.",
     "CL_CF_LG_contact": "Επιβεβαιώνετε ότι έχετε ενημερωθεί ότι μπορείτε να αποσύρετε τη συγκατάθεσή σας που δίνετε παραπάνω ανά πάσα στιγμή στις ρυθμίσεις του λογαριασμού ή επικοινωνώντας με την ακόλουθη διεύθυνση ηλεκτρονικού ταχυδρομείου: privacy@connectlife.io",
     "CL_CF_LG_legal": "Νομικός",
-    "CL_CF_LG_enduser_privacy": "Πολιτική Απορρήτου Δεδομένων"
+    "CL_CF_LG_enduser_privacy": "Πολιτική Απορρήτου Δεδομένων",
+    "CL_SM_CM_devices_are_running_eco_mode_key": "Οι ## συσκευές εκτελούν λειτουργία ECO",
+    "CL_CF_UC_full_name_with_title": ""
 }
