--- a/language/i18n_ku_TR.json
+++ b/language/i18n_ku_TR.json
@@ -155,7 +155,7 @@
     "ac_electricity_statistics": "",
     "ac_temperature_unit": "",
     "ac_manual_examination": "",
-    "ac_last_examination_date": "",
+    "ac_last_examination_date": "Dîroka nîqaşa dawî",
     "ac_auto": "",
     "ac_air_supply": "",
     "ac_dehumidify": "",
@@ -2183,13 +2183,13 @@
     "ac_continue_new": "",
     "share_device_f_d": "",
     "ac_checking_new": "",
-    "last_exam": "",
+    "last_exam": "Emtîhana dawî",
     "ac_result": "",
     "add_a_favorite": "",
     "add_a_schedule": "",
     "exam_again": "",
-    "ac_new_temperature_unit": "",
-    "ac_manual_examination_new": "",
+    "ac_new_temperature_unit": "Yekîtiya Tebilî",
+    "ac_manual_examination_new": "Xweşandinên Xwe",
     "contact_service_new": "",
     "bucket_full_title": "",
     "bucket_full_content": "",
@@ -2243,7 +2243,7 @@
     "input_password_cdc_tips": "",
     "self_pump_setup_1": "",
     "self_pump_setup_2": "",
-    "no_favor": "",
+    "no_favor": "Ne favorî",
     "unpair": "",
     "sync_to_auto": "",
     "slide_tips": "",
@@ -2384,14 +2384,14 @@
     "stand_by": "",
     "home_status": "",
     "auto_fast_preheat": "",
-    "fast_cooling_heat_des": "",
-    "quiet_des": "",
-    "sleep_des": "",
-    "e_heat_des": "",
-    "air_purification_des": "",
-    "ai_des": "",
-    "ai_wind_des": "",
-    "energy_saving_des": "",
+    "fast_cooling_heat_des": "Bi teknolojiya destpêka invertêra zû ya QSD, kompresor dikare frekansa herî bilind di demeke kin de bigihîne û germkirin/sar kirina zû pêk bîne.",
+    "quiet_des": "Dengê xebatê ya şertkirina hewayê kêm e, bikarhêner mirovekî ronî û aram e.",
+    "sleep_des": "Temperatura ji bo xewa endamanê malbatê bi awayekî cûda pêşkêş bike, da ku hûn bi aramî bikaribin xew bikevin.",
+    "e_heat_des": "Di mercên jiyana sar de, moda Germkirina Taybet a me malê we ji dondurmê digire bi pêşxistina wê li 8℃ temperatura ambient dema ku hûn ji malê dûr in ji bo demên dirêj.",
+    "air_purification_des": "Bi karhênîna HI-NANO, an jî UVC, Plasma, IFD û metodên din ji bo pêşîlêgirtina bakteriyan an vîrusan di hewayê de, rolekî di paqijkirina hewayê de dilîze.",
+    "ai_des": "AI SMART bi awayekî zirik daxwaza rehetiya te radigire. Bi awayekî otomatîkî temperatur, rûbarî û rûbera ba dixebitîne.",
+    "ai_wind_des": "Avakirina hewayê dikare bi awayekî zirik winda kontrol bike li gorî cîhê we, hûn dikarin modê \"winda teşwîq bike\" bibijêrin, an jî modê \"winda ji te re derkeve\".",
+    "energy_saving_des": "Avakirina hewayê dikare bi lezgînî bibe moda qenzayî ya enerjîyê da ku karînîya enerjîyê bi kêmtirînî bike.",
     "verifying_code": "",
     "connecting_to_device": "",
     "linking_to_cloud": "",
@@ -2452,8 +2452,8 @@
     "end_time_forever_key": "",
     "duct_power_statistics": "",
     "dimmer": "",
-    "swing_des": "",
-    "beep_des": "",
+    "swing_des": "Avakirina hewayê bi hêsanî û yekrêzî dihêle û bi fûkanê hewa jor û jêr dihêle.",
+    "beep_des": "Buzzerê bêdeng bike bo mirovgeha hêdî.",
     "ask_precise_location_permissions": "",
     "ask_location_permissions": "",
     "light_setting": "",
@@ -2775,7 +2775,7 @@
     "asko_offline_content_th": "",
     "hide_clock_on_display": "",
     "ac_fresh_air": "",
-    "ac_fresh_air_des": "",
+    "ac_fresh_air_des": "Bi paqijkirina pêçandin, hewa taza tê birin odayê, ev mirovan bi hêz û enerjiyê diparêze.",
     "ac_both_sides": "",
     "ac_swing_right": "",
     "fridge_fan_failure": "",
@@ -3906,8 +3906,8 @@
     "about_energy_saving_key": "",
     "rf_uv_tech_desc": "",
     "other_rinse": "",
-    "search_again_title": "",
-    "search_again_content": "",
+    "search_again_title": "Pejirandinekî bo lêgerînê dîsa bikî?",
+    "search_again_content": "Dîtinên nûjîkirinê dê hejmara amûrên nûjî bike, û fonksiyona kontrolê ne dê di dema prosesa dîtinên nû de amade be.",
     "select_at_least_one_device": "",
     "ri_select_address_tips": "",
     "default_address": "",
@@ -3977,7 +3977,6 @@
     "CL_DV_OV_g800_mode_reheat": "",
     "CL_DV_OV_g800_mode_preserving": "",
     "CL_DV_OV_g800_mode_sterilise_bottles": "",
-    "CL_SM_CM_devices_are_running_eco_mode": "",
     "CL_DV_OV_g800_add_steam_to": "",
     "CL_DV_OV_g800_steam_intensity": "",
     "CL_DV_OV_g800_steam_duration": "",
@@ -3995,5 +3994,7 @@
     "CL_CF_LG_receive_content": "",
     "CL_CF_LG_contact": "",
     "CL_CF_LG_legal": "",
-    "CL_CF_LG_enduser_privacy": ""
+    "CL_CF_LG_enduser_privacy": "",
+    "CL_SM_CM_devices_are_running_eco_mode_key": "",
+    "CL_CF_UC_full_name_with_title": ""
 }
