--- a/language/i18n_mk_MK.json
+++ b/language/i18n_mk_MK.json
@@ -3977,7 +3977,6 @@
     "CL_DV_OV_g800_mode_reheat": "Повторно загрејте",
     "CL_DV_OV_g800_mode_preserving": "Зачувување",
     "CL_DV_OV_g800_mode_sterilise_bottles": "Стерилизирајте шишиња",
-    "CL_SM_CM_devices_are_running_eco_mode": "## уреди користат ECO-режим",
     "CL_DV_OV_g800_add_steam_to": "Додадете пареа во процесот на печење.",
     "CL_DV_OV_g800_steam_intensity": "Интензитетот на пареа",
     "CL_DV_OV_g800_steam_duration": "Времетраење на пареа",
@@ -3995,5 +3994,7 @@
     "CL_CF_LG_receive_content": "Целта и основата е да се овозможи испраќање на маркетинг пораки или да се претстави персонализирана понуда врз основа на вашите интереси или да се подобри искуството на вашиот корисник.",
     "CL_CF_LG_contact": "Потврдувате дека сте информирани дека можете да ја повлечете вашата согласност дадена погоре во секое време во поставките на сметката или со контактирање на следната адреса за е-пошта: privacy@connectlife.io",
     "CL_CF_LG_legal": "Правни",
-    "CL_CF_LG_enduser_privacy": "Политика за приватност на податоците"
+    "CL_CF_LG_enduser_privacy": "Политика за приватност на податоците",
+    "CL_SM_CM_devices_are_running_eco_mode_key": "Уредите ## работат на режимот ЕКО",
+    "CL_CF_UC_full_name_with_title": ""
 }
