--- a/language/i18n_ru.json
+++ b/language/i18n_ru.json
@@ -3977,7 +3977,6 @@
     "CL_DV_OV_g800_mode_reheat": "Разогрев",
     "CL_DV_OV_g800_mode_preserving": "Консервирование",
     "CL_DV_OV_g800_mode_sterilise_bottles": "Стерилизация",
-    "CL_SM_CM_devices_are_running_eco_mode": "## устройств работают в режиме ECOmode",
     "CL_DV_OV_g800_add_steam_to": "Добавьте пар в процесс выпечки.",
     "CL_DV_OV_g800_steam_intensity": "Интенсивность пара",
     "CL_DV_OV_g800_steam_duration": "Продолжительность пара",
@@ -3995,5 +3994,7 @@
     "CL_CF_LG_receive_content": "Целью и основанием является обеспечение возможности отправки маркетинговых сообщений или представления персонализированного предложения, основанного на ваших интересах, или улучшения опыта вашего пользователя.",
     "CL_CF_LG_contact": "Вы подтверждаете, что вам сообщили, что вы можете отозвать свое согласие, данное выше, в любое время в настройках учетной записи или связавшись по следующему адресу электронной почты: Privacy@connectlife.io",
     "CL_CF_LG_legal": "Юридический",
-    "CL_CF_LG_enduser_privacy": "Политика конфиденциальности данных"
+    "CL_CF_LG_enduser_privacy": "Политика конфиденциальности данных",
+    "CL_SM_CM_devices_are_running_eco_mode_key": "## устройств работают в экономичном режиме",
+    "CL_CF_UC_full_name_with_title": ""
 }
